force-app/main/default/objects/Class_Session__c/Class_Session__c.object-meta.xml
<CustomObject>
    <label>Class Session</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>