force-app/main/default/objects/Class_Session__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Session</relationshipLabel>
    <relationshipName>Class_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>