force-app/main/default/objects/Class_Session__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <label>Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>