force-app/main/default/objects/Class_Session__c/fields/Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Minutes__c</fullName>
    <label>Duration In Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration</valueSetName>
    </valueSet>
</CustomField>