force-app/main/default/objects/Class_Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c + (VALUE(TEXT(Duration_In_Minutes__c)) * 60000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Time</type>
</CustomField>