force-app/main/default/objects/Class_Session__c/fields/Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Enrollments__c</fullName>
    <description>This field is used manage total number of enrollments under particular class sessions</description>
    <label>Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>