force-app/main/default/objects/Class_Session__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Class Session</relationshipLabel>
    <relationshipName>Class_Session</relationshipName>
    <type>Lookup</type>
</CustomField>