force-app/main/default/objects/Class_Session__c/fields/Seats_Left__c.field-meta.xml
<CustomField>
    <fullName>Seats_Left__c</fullName>
    <formula>Capacity__c -  Enrollments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>