force-app/main/default/objects/Class_Session__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>false</active>
    <description>Minutes cannot be zero.</description>
    <errorConditionFormula>OR(Duration__c &lt;= 0, 
Start_Time__c == End_Time__c)</errorConditionFormula>
    <errorMessage>Minutes should be greater than zero.</errorMessage>
</ValidationRule>